--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,9 @@
 
 .actual-news {
   width: 100%;
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
   margin-top: 30px;
   display: flex;
   flex-wrap: wrap;
@@ -260,7 +263,6 @@
 
 .preview-img {
   width: 380px;
-
   padding: 0px 0px 60px 0px;
 }
 
@@ -386,56 +388,6 @@
 
 .sec-ond-header-text:hover {
   color: #b59f5b;
-}
-
-.to-find {
-  display: flex;
-  width: 100%;
-  margin-top: 60px;
-  margin-bottom: 62px;
-}
-
-.write {
-  flex-grow: 1;
-}
-
-.entry-field {
-  width: 1px;
-  height: 1px;
-  position: absolute;
-  clip: rect(1px 1px 1px 1px);
-}
-
-.field {
-  box-sizing: border-box;
-  border: none;
-  min-height: 48px;
-  width: 222px;
-  background-color: #f4f7f6;
-  font-size: 13px;
-  font-family: "OpenSans-Regular";
-  padding-left: 18px;
-  flex: 1 1 auto;
-}
-
-.field:focus {
-  outline: 2px double #e1d9bd;
-}
-
-.search-button {
-  min-height: 48px;
-  width: 48px;
-  background-color: #b59f5b;
-  border: none;
-  background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/search.svg");
-  background-repeat: no-repeat;
-  background-size: 18px;
-  background-position: center;
-  cursor: pointer;
-}
-
-.search-button:hover {
-  background-color: #000000;
 }
 
 .fi-eld {
@@ -918,6 +870,56 @@
   .social-media {
     padding: 30px 40px;
   }
+
+  .to-find {
+    margin-top: 60px;
+    margin-bottom: 62px;
+    display: flex;
+  }
+
+  .write {
+    flex-grow: 1;
+    display: flex;
+  }
+
+  .entry-field {
+    width: 1px;
+    height: 1px;
+    position: absolute;
+    clip: rect(1px 1px 1px 1px);
+  }
+
+  .field {
+    box-sizing: border-box;
+    border: none;
+    min-height: 48px;
+    width: 225px;
+    background-color: #f4f7f6;
+    font-size: 13px;
+    font-family: "OpenSans-Regular";
+    padding-left: 18px;
+    flex: 1 1 auto;
+  }
+
+  .field:focus {
+    outline: 2px double #e1d9bd;
+  }
+
+  .search-button {
+    min-height: 45px;
+    width: 45px;
+    background-color: #b59f5b;
+    border: none;
+    background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/search.svg");
+    background-repeat: no-repeat;
+    background-size: 15px;
+    background-position: center;
+    cursor: pointer;
+  }
+
+  .search-button:hover {
+    background-color: #000000;
+  }
 }
 
 @media (min-width: 641px) and (max-width: 1199px) and (orientation: landscape) {
@@ -1008,6 +1010,56 @@
     margin-left: 6%;
   }
 
+  .to-find {
+    margin-top: 60px;
+    margin-bottom: 62px;
+    display: flex;
+  }
+
+  .write {
+    flex-grow: 1;
+    display: flex;
+  }
+
+  .entry-field {
+    width: 1px;
+    height: 1px;
+    position: absolute;
+    clip: rect(1px 1px 1px 1px);
+  }
+
+  .field {
+    box-sizing: border-box;
+    border: none;
+    min-height: 48px;
+    width: 225px;
+    background-color: #f4f7f6;
+    font-size: 13px;
+    font-family: "OpenSans-Regular";
+    padding-left: 18px;
+    flex: 1 1 auto;
+  }
+
+  .field:focus {
+    outline: 2px double #e1d9bd;
+  }
+
+  .search-button {
+    min-height: 45px;
+    width: 45px;
+    background-color: #b59f5b;
+    border: none;
+    background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/search.svg");
+    background-repeat: no-repeat;
+    background-size: 15px;
+    background-position: center;
+    cursor: pointer;
+  }
+
+  .search-button:hover {
+    background-color: #000000;
+  }
+
   .icons {
     max-width: 700px;
   }
@@ -1073,7 +1125,7 @@
 
   .basic-information {
     justify-content: center;
-    max-width: 360px;
+    max-width: 320px;
     flex-wrap: wrap;
     margin-top: 45px;
     margin-left: auto;
@@ -1090,6 +1142,7 @@
 
   .content {
     max-width: 320px;
+    margin-left: 15px;
   }
   .preview-img {
     width: 320px;
@@ -1104,7 +1157,7 @@
   }
 
   .sec-tion {
-    width: 100%;
+    width: 320px;
     flex-wrap: wrap;
   }
 
@@ -1113,10 +1166,11 @@
     border-width: 3px;
     border-color: #eeeeee;
     padding-bottom: 17px;
+    max-width: 320px;
   }
 
   .picture {
-    width: 320px;
+    width: 310px;
   }
 
   .aside {
@@ -1141,8 +1195,62 @@
     margin-right: 5%;
   }
 
+  /////////
+
+  .to-find {
+    margin-top: 60px;
+    margin-bottom: 60px;
+    display: flex;
+    width: 270px;
+    height: 48px;
+  }
+
+  .write {
+    flex-grow: 1;
+    display: inline-block;
+  }
+
+  .entry-field {
+    width: 1px;
+    height: 1px;
+    position: absolute;
+    clip: rect(1px 1px 1px 1px);
+  }
+
+  .field {
+    display: inline-block;
+    border: none;
+    min-height: 48px;
+    width: 222px;
+    background-color: #f4f7f6;
+    font-size: 13px;
+    font-family: "OpenSans-Regular";
+    padding-left: 18px;
+  }
+
+  .field:focus {
+    outline: 2px double #e1d9bd;
+  }
+
+  .search-button {
+    min-height: 48px;
+    width: 46px;
+    background-color: #b59f5b;
+    border: none;
+    background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/search.svg");
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center;
+    cursor: pointer;
+  }
+
+  .search-button:hover {
+    background-color: #000000;
+  }
+
+  //////////
   .icons {
-    max-width: 320px;
+    max-width: 310px;
   }
 
   .social-media {
@@ -1154,8 +1262,10 @@
   }
 
   .popup-contant {
-    width: 320px;
+    width: 300px;
     font-size: 11px;
+    padding: 25px 15px;
+    height: 490px;
   }
 
   .select {
@@ -1171,9 +1281,14 @@
     font-size: 11px;
   }
 
+  .popup_hidden {
+    display: flex;
+    display: none;
+  }
+
   .button-close {
-    margin-left: 90%;
-    width: 35px;
-    height: 35px;
+    margin-left: 95%;
+    width: 15px;
+    height: 15px;
   }
 }
