--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@
   background-image: url(../images/banner-bg.jpg);
   background-color: #000000;
   width: 100%;
-  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   background-size: cover;
@@ -164,7 +163,6 @@
 
 .actual-news {
   width: 100%;
-  max-width: 1200px;
   margin-right: auto;
   margin-left: auto;
   margin-top: 30px;
@@ -1197,17 +1195,50 @@
 
   /////////
 
-  .to-find {
-    margin-top: 60px;
-    margin-bottom: 60px;
-    display: flex;
-    width: 270px;
-    height: 48px;
+  .find-button {
+    padding: 30px 0;
   }
 
-  .write {
-    flex-grow: 1;
-    display: inline-block;
+  .to-find {
+    position: relative;
+    width: 295px;
+    margin: 0 auto;
+    margin-top: 35px;
+    margin-bottom: 35px;
+  }
+
+  .field {
+    width: 76%;
+    min-height: 48px;
+    padding-left: 18px;
+    border: none;
+    background-color: #f4f7f6;
+    font-family: "OpenSans-Regular";
+    font-size: 13px;
+    box-sizing: border-box;
+    border: none;
+    flex: 1 1 auto;
+  }
+
+  .field:focus {
+    outline: 2px double #e1d9bd;
+  }
+
+  .search-button {
+    position: absolute;
+    top: 0;
+    width: 48px;
+    height: 48px;
+    border: none;
+    background-color: #b59f5b;
+    cursor: pointer;
+    background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/search.svg");
+    background-repeat: no-repeat;
+    background-size: 15px;
+    background-position: center;
+  }
+  .search-button:hover {
+    background-color: #000000;
   }
 
   .entry-field {
@@ -1216,39 +1247,8 @@
     position: absolute;
     clip: rect(1px 1px 1px 1px);
   }
-
-  .field {
-    display: inline-block;
-    border: none;
-    min-height: 48px;
-    width: 222px;
-    background-color: #f4f7f6;
-    font-size: 13px;
-    font-family: "OpenSans-Regular";
-    padding-left: 18px;
-  }
-
-  .field:focus {
-    outline: 2px double #e1d9bd;
-  }
-
-  .search-button {
-    min-height: 48px;
-    width: 46px;
-    background-color: #b59f5b;
-    border: none;
-    background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/search.svg");
-    background-repeat: no-repeat;
-    background-size: 20px;
-    background-position: center;
-    cursor: pointer;
-  }
-
-  .search-button:hover {
-    background-color: #000000;
-  }
-
   //////////
+
   .icons {
     max-width: 310px;
   }
